--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .gradle
 /build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+*.trc
+*.txt
 
 # Ignore Gradle GUI config
 gradle-app.setting
@@ -12,3 +17,13 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+
+### VS Code ###
+.vscode/
